# job-runner

./: .gitignore  docker-compose.yml
observability/: prometheus.yml
observability/webhook/: server.py
prometheus/: alertmanager.yml  alerts.yml
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 1021541856ab_update_job_table.py  248b5922dd2c_add_result_json_column.py  42c57ce28eda_add_attempts_and_run_after.py  62f7cf3b66ac_add_attempts_and_run_after.py  8e144e100cdc_add_attempts_and_run_after.py  b24fc4c14f7c_create_jobs_table.py  bfa0dc02879b_add_failed_at_last_error_and_last_error_.py  f47ff4fa4f25_set_defaults_for_attempts_and_max_.py
services/api/app/: main.py
services/api/app/api/: routes.py
services/api/app/core/: config.py  metrics.py  queue.py  redis.py
services/api/app/db/: session.py
services/api/app/models/: job.py
services/api/app/schemas/: job.py  result.py
services/worker/: Dockerfile  pyproject.toml
services/worker/worker/: main.py  reaper.py
services/worker/worker/core/: config.py  logging.py  metrics.py  queue.py  redis.py  retry.py
services/worker/worker/db/: claim.py  session.py
services/worker/worker/jobs/: handlers.py
services/worker/worker/models/: job.py
services/worker/worker/queue/: redis_queue.py
