[project]
name = "jobrunner-worker"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
      "sqlalchemy>=2.0",
      "asyncpg>=0.29",
      "pydantic>=2.6",
      "pydantic-settings>=2.2",
      "python-json-logger>=2.0",
      "greenlet>=3.0",
      "redis>=5.0",
      "prometheus-client>=0.17",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3"
]